--- a/css/style.css
+++ b/css/style.css
@@ -635,3 +635,111 @@ textarea {
   background-color: #4b66b5;
   color: #fff;
 }
+.cate-nav {
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  margin-bottom: 0.5333rem;
+}
+.cate-nav li {
+  padding: 0 0.4rem;
+  height: 30px;
+  line-height: 30px;
+  border-bottom: 2px solid transparent;
+}
+.cate-nav li a {
+  color: #333;
+  font-size: 14px;
+}
+.cate-nav li.on {
+  border-bottom: 2px solid #4b66b5;
+}
+.cate-sub-nav li {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  background: #fff;
+  display: none;
+  flex-wrap: wrap;
+  height: auto;
+}
+.cate-sub-nav li a {
+  flex: 0 1 30%;
+  padding: 5px;
+  text-align: center;
+}
+.cate-sub-nav li a span {
+  display: inline-block;
+  width: 90%;
+  height: 30px;
+  border: 1px solid yellow;
+  border-radius: 15px;
+}
+.short-video-wrap .video-list {
+  padding: 0 15px 60px;
+}
+.short-video-wrap .video-list li {
+  width: 100%;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #dedddd;
+}
+.short-video-wrap .video-list li span {
+  font-size: 14px;
+}
+.short-video-wrap .video-list li p {
+  font-size: 12px;
+}
+.short-video-wrap .video-list li .video-box {
+  position: relative;
+  width: 100%;
+  height: 190px;
+  overflow: hidden;
+}
+.short-video-wrap .video-list li .video-box video {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 100%;
+}
+.short-video-wrap .video-list li .video-box .video-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+}
+.short-video-wrap .video-list li .video-box .video-player span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 80px;
+  color: #fff;
+}
+.video-player-box {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  z-index: 999;
+  display: none;
+}
+.video-player-box video {
+  width: 100%;
+  height: 100%;
+}
+.product-details-wrap {
+  padding: 0 15px;
+}
+.product-details-wrap .pro-price {
+  color: red;
+}
