--- a/css/style.less
+++ b/css/style.less
@@ -681,7 +681,7 @@ font-family: 'Helvetica Neue',Helvetica,sans-serif;
   overflow-y: hidden;
   overflow-x: scroll;
   margin-bottom: 0.5333rem;
-  li{
+  li.mui-pull-left{
     padding:0 0.4rem;
     height: 30px;
     line-height: 30px;
@@ -697,17 +697,19 @@ font-family: 'Helvetica Neue',Helvetica,sans-serif;
 }
 .cate-sub-nav{
   li{
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: 99;
+    display: none;
     background: #fff;
-    display:none;
     flex-wrap: wrap;
-    height: auto;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    overflow: hidden;
+    &.on{
+      display: flex;
+    }
     a{
       flex: 0 1 30%;
       padding: 5px;
+      line-height: 28px;
       text-align:center;
       span{
         display:inline-block;
